fix: image display; added scrollbar + changed image height

--- a/src/components/ImageDisplay/style.css
+++ b/src/components/ImageDisplay/style.css
@@ -4,8 +4,7 @@
   justify-content: flex-end;
   align-items: center;
   padding: 15px;
-  width: 174.3px;
-  height: 120px;
+  width: 174.5px;
   overflow: hidden;
 }
 
