--- a/src/pages/images/style.css
+++ b/src/pages/images/style.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  max-height: 500px;
+  max-height: 600px;
   min-width: 200px;
 }
 
@@ -59,16 +59,43 @@
   gap: 10px;
   align-content: flex-start;
   overflow: scroll;
-  max-height: 500px;
+  overflow-x: hidden;
+  max-height: 600px;
 }
 
-.images_container {
+/* .images_container {
   -ms-overflow-style: none; 
   scrollbar-width: none; 
+} */
+
+/* Firefox (uncomment to work in Firefox, although other properties will not work!)  */
+/** {
+  scrollbar-width: thin;
+  scrollbar-color: #397524 #DFE9EB;
+}*/
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+  height: 10px;
+  width: 13px;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 1px;
+  background-color: transparent;
+  border: 1px solid #424242;
 }
 
-.images_container::-webkit-scrollbar {
-  display: none;
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #42424273;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #2183C9;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #2183C9;
 }
 
 .images_container .images_container_message {
